# beginner-data-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: branch.yaml
beginner-data-project/: makefile
beginner_data_project/: makefile
beginner_data_project/dags/: runtime_variables.py  user_functions.py
beginner_data_project/infra/: .terraform.lock.hcl  create_user_purchase.py  main.tf  terraform.tf  terraform.tfstate  variable.tf
beginner_data_project/scripts/: __init__.py
beginner_data_project/scripts/aws/: user_scripts.py
beginner_data_project/scripts/sql/: create_user_purchase_data.sql  extract_user_purchase_data.sql  redshift_user_purchase_data.sql
tests/: makefile  test_hello.py
tests/infra/: __init__.py  test_create_user_purchase.py
