[tool.poetry]
name = "beginner-data-project"
version = "0.1.0"
description = ""
authors = ["Heran Zhao"]
readme = "README.md"
packages = [{include = "beginner_data_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.5"
pandas = "^1.5.2"
black = "^22.12.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
isort = "^5.11.4"


[tool.poetry.group.isort.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
